--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="public/normalize.css">
+<link rel="stylesheet" href="public/main.css">
+<link rel="stylesheet" href="public/font-awesome-4.3.0/css/font-awesome.min.css">
+
+<div class="center">
 <script type="text/javascript">
 
 </script>
@@ -5,3 +10,4 @@
 <h1> Go eat here:</h1>
 <h2>{{name}} {{address}}</h2>
 
+</div>
